--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -12,6 +12,7 @@
         <div class="list-group">
             <a th:href="@{/applications}" class="list-group-item list-group-item-action">Applications</a>
             <a th:href="@{/credentials}" class="list-group-item list-group-item-action">Credentials</a>
+            <a th:href="@{/apiKeys}" class="list-group-item list-group-item-action">API Keys</a>
         </div>
     </div>
 </div>
