--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -38,6 +38,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarEntitiesLink">
                                 <li><a th:href="@{/applications}" class="dropdown-item">Applications</a></li>
                                 <li><a th:href="@{/credentials}" class="dropdown-item">Credentials</a></li>
+                                <li><a th:href="@{/apiKeys}" class="dropdown-item">API Keys</a></li>
                             </ul>
                         </li>
                         <li class="navbar-item">
