--- a/src/main/resources/templates/businessApp/list.html
+++ b/src/main/resources/templates/businessApp/list.html
@@ -29,7 +29,7 @@
             </div>
             <div class="card-body">
                 <div class="card-text">
-                    <form id="searchForm" th:action="${requestUri}" th:object="${businessAppSearch}" method="get">
+                    <form id="searchForm" th:action="@{/applications}" th:object="${businessAppSearch}" method="get">
                         <div class="row mb-3">
                             <div class="col-3">
                                 <label for="txtCode" class="form-label">Code</label>
